# Foster

./: .gitignore  Foster.cabal  LICENSE  PuzzleGenerator.cabal  README.md
src/: Generator.hs  Main.hs  Solver.hs
src/Foster/: Checker.hs  Data.hs  Generator.hs  IO.hs  Interpreter.hs  Parser.hs  Solver.hs  Utils.hs
